fix entity movement and attack